<resources>
    <string name="app_name">So Manager</string>
    <string name="feedbacktitle">Ajout d un nouveau jury</string>
    <string name="feedbackname">Nom du jury</string>
    <string name="feedbackemail">Email du jury</string>
    <string name="feedbackresponse">Envoi de la réponse</string>

    <string name="id">Saisir l ID</string>
    <string name="password">Saisir le mot de passe</string>
    <string name="name_prompt">Nom utilisateur</string>
    <string name="pass_prompt">Mot de passe</string>

    <string name="saved_token">saved_token</string>
    <string name="saved_username">saved_username</string>

    <string name="project_students">Elèves</string>
    <string name="project_title">Titre</string>
    <string name="project_supervisor">Superviseur</string>
    <string name="project_confidentiality">Confidentialité</string>
    <string name="project_description">Description</string>

    <string name="dummy_movie_genre">movie</string>
    <string name="dummy_movie_title">titre</string>
    <string name="dummy_movie_year">year</string>
    <string name="movie_synopsis_label">label</string>
    <string name="dummy_movie_synopsis">synopsus</string>

   <string name="dummy_movie_genres">Comedy, Period Drama, Fantasy</string>
    <string name="movie_director_label">Director</string>
    <string name="dummy_movie_director">GILLIAM, Terry</string>
    <string name="movie_reviews_detail">Details</string>
    <string name="movie_roles_label">Roles</string>
    <string name="dummy_movie_country">United Kingdom</string>
    <string name="movie_poster_description">movie poster</string>
    <string name="dummy_movie_score">Rating 5 stars (from 1 review)</string>
    <string name="dummy_role_artist">Michael Palin</string>
    <string name="dummy_role_name">Patsy</string>

</resources>